<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="BASIC OPTIONS" >

        <ListPreference
            android:dependency="enable_coap_semantic"
            android:defaultValue="-1"
            android:key="ct_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_ct_type" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="SEMANTIC OPTIONS" >

        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_coap_semantic"
            android:title="@string/pref_title_semantic" />

        <ListPreference
            android:dependency="enable_coap_semantic"
            android:defaultValue="-1"
            android:entries="@array/ref_onto_entries"
            android:entryValues="@array/ref_onto_entry_values"
            android:key="ro_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_ref_onto" />

        <Preference
            android:dependency="enable_coap_semantic"
            android:key="sd_key"
            android:title="@string/pref_title_sem_desc"
            android:defaultValue="@string/pref_summary_sem_desc"
            android:summary="@string/pref_summary_sem_desc">
        </Preference>

        <ListPreference
            android:dependency="enable_coap_semantic"
            android:defaultValue="-1"
            android:key="at_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_ann_type" />

        <ListPreference
            android:dependency="enable_coap_semantic"
            android:defaultValue="2"
            android:entries="@array/sem_task_entries"
            android:entryValues="@array/sem_task_entry_values"
            android:key="st_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sem_task" />

        <ListPreference
            android:dependency="enable_coap_semantic"
            android:defaultValue="80"
            android:entries="@array/sem_tresh_entries"
            android:entryValues="@array/sem_tresh_entry_values"
            android:key="sr_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sem_tresh" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="GEOGRAPHICAL OPTIONS" >

        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_coap_geo"
            android:title="@string/pref_title_geo" />

        <EditTextPreference
            android:dependency="enable_coap_geo"
            android:defaultValue="0"
            android:inputType="numberDecimal"
            android:key="lat_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_lat" />

        <EditTextPreference
            android:dependency="enable_coap_geo"
            android:defaultValue="0"
            android:inputType="numberDecimal"
            android:key="lon_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_lon" />

        <EditTextPreference
            android:dependency="enable_coap_geo"
            android:defaultValue="0"
            android:inputType="number"
            android:key="md_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_distance" />

    </PreferenceCategory>


</PreferenceScreen>